# eva-vm

./: .clangd  .gitignore  1  CMakeLists.txt  compile_flags.txt  eva-vm.cpp
src/: Logger.cpp  Logger.h  Logger.hpp  eva-vm.cpp
src/bytecode/: OpCode.cpp  OpCode.h  OpCode.hpp
src/compiler/: EvaCompiler.cpp  EvaCompiler.h  EvaCompiler.hpp  Scope.cpp  Scope.h  Scope.hpp
src/disassembler/: EvaDisassembler.cpp  EvaDisassembler.h  EvaDisassembler.hpp
src/gc/: EvaCollector.cpp  EvaCollector.h  EvaCollector.hpp
src/parser/: EvaGrammar.bnf  EvaParser.h  Expression.cpp  Expression.h
src/vm/: EvaVM.h  EvaValue.cpp  EvaValue.h  EvaValue.hpp  EvaVm.cpp  EvaVm.h  EvaVm.hpp  Global.cpp  Global.h  Global.hpp
